k8s/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-3
  labels:
    app: sample-3
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sample-3
  template:
    metadata:
      labels:
        app: sample-3
    spec:
      containers:
        - name: sample-3
          image: sample/sample-3:latest
          ports:
            - containerPort: 8080
