k8s/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-3-service
spec:
  selector:
    app: sample-3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
